K8s/platformservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice
spec:
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      automountServiceAccountToken: false
      containers:
        - name: platformservice
          image: juvenstu/platformservice
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
