K8s/commandsservice-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: commandsservice-clusterip
spec:
  selector:
    app: commandsservice
  ports:
    - port: 8080
      targetPort: 8080
