K8s/platformservice-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformservice-nodeport
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
