K8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: harmonia.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/platforms"
            backend:
              service:
                name: platformservice-clusterip
                port:
                  number: 8080
          - pathType: Prefix
            path: "/api/c/platforms"
            backend:
              service:
                name: commandsservice-clusterip
                port:
                  number: 8080
